unpackaged/main/default/objects/Tax_Type__mdt/Tax_Type__mdt.object-meta.xml
<CustomObject>
    <description>See W-001632</description>
    <label>Tax Type</label>
    <pluralLabel>Tax Types</pluralLabel>
</CustomObject>