unpackaged/main/default/objects/Tax_Type__mdt/fields/Domiciliation__c.field-meta.xml
<CustomField>
    <fullName>Domiciliation__c</fullName>
    <label>Domiciliation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>France</fullName>
                <default>true</default>
                <label>France</label>
            </value>
            <value>
                <fullName>French Overseas Territories</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>