unpackaged/main/default/objects/Tax_Type__mdt/fields/Tax_Percent__c.field-meta.xml
<CustomField>
    <fullName>Tax_Percent__c</fullName>
    <label>Tax Percent</label>
    <precision>12</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>