unpackaged/main/default/objects/Tax_Type__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Reduced</fullName>
            </value>
            <value>
                <fullName>Dom</fullName>
            </value>
            <value>
                <fullName>Tom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>